clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/struct_has_own_struct_type_as_field/struct_has_own_struct_type_as_field.cbs
// RUN: %clang_cc1 -verify %s

owned struct G;
owned struct G {
  public:
    G *g;
};

owned struct K;
owned struct S {
  public:
    K *k;
};

owned struct K {
  public:
    S *s;
};

void use_G_mut(G *_Borrow g);
void use_G_const(const G *_Borrow g);
void use_S_mut(S *_Borrow s);
void use_S_const(const S *_Borrow s);
void use_K_mut(K *_Borrow k);
void use_K_const(const K *_Borrow k);

void test1(G g1) {
  G g = { .g = &g1 };
  G *_Borrow p1 = &_Mut g; // expected-note {{mutable borrow occurs here}}
                         // expected-note@-1 {{first mut borrow occurs here}}
                         // expected-note@-2 {{mutable borrow occurs here}}
                         // expected-note@-3 {{first mut borrow occurs here}}
                         // expected-note@-4 {{mutable borrow occurs here}}
  const G *_Borrow p2 = &_Const g; // expected-error {{cannot borrow `g` as immutable because it is also borrowed as mutable}}
  G *_Borrow p3 = &_Mut *g.g; // expected-error {{cannot borrow `*g.g` as mutable more than once at a time}}
  const G *_Borrow p4 = &_Const *g.g; // expected-error {{cannot borrow `*g.g` as immutable because it is also borrowed as mutable}}
  G *_Borrow p5 = &_Mut *g.g->g; // expected-error {{cannot borrow `*(*g.g).g` as mutable more than once at a time}}
  const G *_Borrow p6 = &_Const *g.g->g; // expected-error {{cannot borrow `*(*g.g).g` as immutable because it is also borrowed as mutable}}
  use_G_mut(p1);
  use_G_const(p2);
  use_G_mut(p3);
  use_G_const(p4);
  use_G_mut(p5);
  use_G_const(p6);   
}

void test2(G g1) {
  G g = { .g = &g1 };
  G *_Borrow p1 = &_Mut g; // expected-note {{first mut borrow occurs here}}
                         // expected-note@-1 {{first mut borrow occurs here}}
  G *_Borrow p2 = &_Mut *g.g; // expected-error {{cannot borrow `*g.g` as mutable more than once at a time}}
  G *_Borrow p3 = &_Mut *g.g->g; // expected-error {{cannot borrow `*(*g.g).g` as mutable more than once at a time}}
  use_G_mut(p1);
  use_G_mut(p2);
  use_G_mut(p3);
}

void test3(S s1) {
  K k = { .s = &s1 };
  K *_Borrow p1 = &_Mut k; // expected-note {{mutable borrow occurs here}}
                         // expected-note@-1 {{first mut borrow occurs here}}
                         // expected-note@-2 {{mutable borrow occurs here}}
                         // expected-note@-3 {{first mut borrow occurs here}}
                         // expected-note@-4 {{mutable borrow occurs here}}
  const K *_Borrow p2 = &_Const k; // expected-error {{cannot borrow `k` as immutable because it is also borrowed as mutable}}
  S *_Borrow p3 = &_Mut *k.s; // expected-error {{cannot borrow `*k.s` as mutable more than once at a time}}
  const S *_Borrow p4 = &_Const *k.s; // expected-error {{cannot borrow `*k.s` as immutable because it is also borrowed as mutable}}
  K *_Borrow p5 = &_Mut *k.s->k; // expected-error {{cannot borrow `*(*k.s).k` as mutable more than once at a time}}
  const K *_Borrow p6 = &_Const *k.s->k; // expected-error {{cannot borrow `*(*k.s).k` as immutable because it is also borrowed as mutable}}
  use_K_mut(p1);
  use_K_const(p2);
  use_S_mut(p3);
  use_S_const(p4);
  use_K_mut(p5);
  use_K_const(p6);   
}

void test4(S s1) {
  K k = { .s = &s1 };
  K *_Borrow p1 = &_Mut k; // expected-note {{first mut borrow occurs here}}
                         // expected-note@-1 {{first mut borrow occurs here}}
  S *_Borrow p2 = &_Mut *k.s; // expected-error {{cannot borrow `*k.s` as mutable more than once at a time}}
  K *_Borrow p3 = &_Mut *k.s->k; // expected-error {{cannot borrow `*(*k.s).k` as mutable more than once at a time}}
  use_K_mut(p1);
  use_S_mut(p2);
  use_K_mut(p3);
}